# ChangeLog for net-misc/neon
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/neon/ChangeLog,v 1.79 2006/10/18 12:44:23 uberlord Exp $

  18 Oct 2006; Roy Marples <uberlord@gentoo.org> neon-0.26.1-r1.ebuild:
  Added ~sparc-fbsd keyword.

  07 Oct 2006; Mike Frysinger <vapier@gentoo.org> neon-0.26.1.ebuild,
  neon-0.26.1-r1.ebuild:
  Punt invalid use of USE=static.

  01 Oct 2006; Guy Martin <gmsoft@gentoo.org> neon-0.26.1-r1.ebuild:
  Stable on hppa.

*neon-0.26.1-r1 (24 Sep 2006)

  24 Sep 2006; Paul de Vrieze <pauldv@gentoo.org> +neon-0.26.1-r1.ebuild:
  Gnutls support is broken in connection with subversion. This should fix
  #148306 and others once and for all.

  03 Sep 2006; Joshua Kinard <kumba@gentoo.org> neon-0.26.1.ebuild:
  Marked stable on mips.

  14 Aug 2006; Paul de Vrieze <pauldv@gentoo.org> neon-0.26.1.ebuild:
  built_with_use dies when the package is not installed at all. To prevent
  dying and allow things to (hopefully) work on a ulibc system add an extra
  has_version check around it. This should solve bug #143886.

  05 Aug 2006; Chris White <chriswhite@gentoo.org> metadata.xml:
  metadata.xml translation by Yoshino-san in bug #136538

  30 Jul 2006; Daniel Gryniewicz <dang@gentoo.org> neon-0.26.1.ebuild:
  Marked stable on amd64 for bug #139506

  26 Jul 2006; Joshua Kinard <kumba@gentoo.org> neon-0.25.5.ebuild:
  Marking stable on mips (dep needed by gnome-vfs).

  25 Jul 2006; Thomas Cort <tcort@gentoo.org> neon-0.26.1.ebuild:
  Stable on alpha wrt Bug #139506.

  23 Jul 2006; Akinori Hattori <hattya@gentoo.org> neon-0.26.1.ebuild:
  x86 stable, bug #139506

  23 Jul 2006; Tobias Scherbaum <dertobi123@gentoo.org> neon-0.26.1.ebuild:
  ppc stable, bug #139506

  20 Jul 2006; Markus Rothe <corsair@gentoo.org> neon-0.26.1.ebuild:
  Stable on ppc64; bug #139506

  17 Jul 2006; Daniel Gryniewicz <dang@gentoo.org> neon-0.25.3.ebuild:
  Marked stable on amd64 for bug #139612
