@@ -1,22 +1,22 @@
 DIST neon-0.24.7.tar.gz 603592 RMD160 5977515bf3bfb098d9996a62cc94c13d2229e835 SHA1 51e556790c79eed99ba8328e79eb7fe996cc34ea SHA256 962bd60b16e6702cb7a5de8b59e661e10c7ad9d5b349ee312a995e7c360253a5
 DIST neon-0.25.3.tar.gz 730495 RMD160 a23ad739118454207b6ec36cb23c8ce676e035c2 SHA1 11515af72e40f0e7cab64df2f59202ebbf80b269 SHA256 d2cb4dd9ff7b6dcfd91097eaf2cafea21041a7cb560970cac96b36305e2f4e50
 DIST neon-0.26.1.tar.gz 781639 RMD160 240e7e34e9b7796ea88c876cf880d3bf38bd94dc SHA1 bce9be9c2874548c35af8f25ed63f78e89d69497 SHA256 c72dc47a9918ed2dc026dff71e4b4fae87174b2bc7a008b0425b7bc9ec0b7160
-EBUILD neon-0.24.7.ebuild 1010 RMD160 1237e67d4e0e66f9fa53d9101b468614705cfe69 SHA1 28f9e405a545c8f393127bc1fd3ec9c1805ac0a1 SHA256 ca7cf388d9c5149aede34661ca33374bead80797aef2f321234bf501fe4f6fa4
-MD5 e4e8ccb9016d6e15808603f7d28008ee neon-0.24.7.ebuild 1010
-RMD160 1237e67d4e0e66f9fa53d9101b468614705cfe69 neon-0.24.7.ebuild 1010
-SHA256 ca7cf388d9c5149aede34661ca33374bead80797aef2f321234bf501fe4f6fa4 neon-0.24.7.ebuild 1010
-EBUILD neon-0.25.3.ebuild 1389 RMD160 8fdfdfa6358e4a380d4fa1a19d38bf77f3d615bf SHA1 f66c1dfc0706c11221297d2adb63acfe7ab3b24e SHA256 79979156b06accf9f403fffa18b5023396deec9a39d0197ad6fa07ef9455d322
-MD5 5fc1637433873d9a8e19de6ac7d8cb70 neon-0.25.3.ebuild 1389
-RMD160 8fdfdfa6358e4a380d4fa1a19d38bf77f3d615bf neon-0.25.3.ebuild 1389
-SHA256 79979156b06accf9f403fffa18b5023396deec9a39d0197ad6fa07ef9455d322 neon-0.25.3.ebuild 1389
-EBUILD neon-0.26.1-r1.ebuild 2553 RMD160 a31b133b88c038ea5f307d2af23a9e763907e7bd SHA1 a3870755034a1429314cf10c472a9aa2780b4176 SHA256 d85231c1bbaee423238b22d0b21a793119c31db2f3146c6ef6c76bc727b865b8
-MD5 4846da5942ce3764a891cd1b68daf4f0 neon-0.26.1-r1.ebuild 2553
-RMD160 a31b133b88c038ea5f307d2af23a9e763907e7bd neon-0.26.1-r1.ebuild 2553
-SHA256 d85231c1bbaee423238b22d0b21a793119c31db2f3146c6ef6c76bc727b865b8 neon-0.26.1-r1.ebuild 2553
-MISC ChangeLog 10560 RMD160 e6732ce8e76286831e3a6eb9c1e286ff61cc9334 SHA1 d20e0155f1bbe40acd5e88d66d5f7bccb82fd869 SHA256 45040bfab1fc4591382bdd5065305a44f4f589309a5c8fd4028031dce80c521c
-MD5 af33b5af2b2554b5d0b521f6dad3db6b ChangeLog 10560
-RMD160 e6732ce8e76286831e3a6eb9c1e286ff61cc9334 ChangeLog 10560
-SHA256 45040bfab1fc4591382bdd5065305a44f4f589309a5c8fd4028031dce80c521c ChangeLog 10560
+EBUILD neon-0.24.7.ebuild 1010 RMD160 1dc51d9398149fa7dc5884489fb44db81539ed0c SHA1 c48a346e5064bb027a48905e84bdfe9065f74d2d SHA256 0d163fee0932a92a66e0dffb2a224bdd281855e869ab2d541621c939c6378206
+MD5 ef3ac2c5680f4da82305c090316c5024 neon-0.24.7.ebuild 1010
+RMD160 1dc51d9398149fa7dc5884489fb44db81539ed0c neon-0.24.7.ebuild 1010
+SHA256 0d163fee0932a92a66e0dffb2a224bdd281855e869ab2d541621c939c6378206 neon-0.24.7.ebuild 1010
+EBUILD neon-0.25.3.ebuild 1392 RMD160 ef0a56015112acb222b96b042f1888c9e44dee64 SHA1 d7b28e4eb7ac282d95650996286d8c18c88559d2 SHA256 fde17752f0fe506656ee1e9d27bba8b462a859ea6009cbdb47f24f01804e49b9
+MD5 054476cb9936502c179e7955119abd03 neon-0.25.3.ebuild 1392
+RMD160 ef0a56015112acb222b96b042f1888c9e44dee64 neon-0.25.3.ebuild 1392
+SHA256 fde17752f0fe506656ee1e9d27bba8b462a859ea6009cbdb47f24f01804e49b9 neon-0.25.3.ebuild 1392
+EBUILD neon-0.26.1-r1.ebuild 2459 RMD160 7540902e7199353b7edd33de05d99e68cb83859b SHA1 1d836c6b43c3594e905536b97f6b0f060867a933 SHA256 2ba3303c9898b1b7e41f89d130fd232774c994594f73e385cbc7a0f4f9cd76b2
+MD5 de902a388892a9bef16e6d0190098740 neon-0.26.1-r1.ebuild 2459
+RMD160 7540902e7199353b7edd33de05d99e68cb83859b neon-0.26.1-r1.ebuild 2459
+SHA256 2ba3303c9898b1b7e41f89d130fd232774c994594f73e385cbc7a0f4f9cd76b2 neon-0.26.1-r1.ebuild 2459
+MISC ChangeLog 10888 RMD160 80bb20ad10b72086d728ccd794b9081c7e0d1a8a SHA1 01efab59bb9294f9e2a7200e5b2e8705c1d020c9 SHA256 8b39695ada9ce77bb9ed098081f6288e664cd7cf50b97f89e1f49e917b77001f
+MD5 2fe8e8ae102cf9937a3b17e606b3c129 ChangeLog 10888
+RMD160 80bb20ad10b72086d728ccd794b9081c7e0d1a8a ChangeLog 10888
+SHA256 8b39695ada9ce77bb9ed098081f6288e664cd7cf50b97f89e1f49e917b77001f ChangeLog 10888
 MISC metadata.xml 1119 RMD160 a8ec4d7a79a724d92a2b30fc1507401bc39bd352 SHA1 93050692a3f090b0aaafbc4d4312b094c9d2cad3 SHA256 ac8d13869be5a16140c0071fe082627dca45cf74904aa46dfd30087e6076443a
 MD5 1ab32452cc378ea0ee54f41d4ae6a254 metadata.xml 1119
 RMD160 a8ec4d7a79a724d92a2b30fc1507401bc39bd352 metadata.xml 1119
